--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ book:
     - "02-chap2.qmd"
     - "03-chap3.qmd"
     - "04-chap4.qmd"
+    - "05-chap5.qmd"
+    - "06-chap6.qmd"
     - "refs.qmd"
   sidebar:
     style: "docked"
