--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ book:
     - "04-chap4.qmd"
     - "05-chap5.qmd"
     - "06-chap6.qmd"
+    - "07-chap7.qmd"
+    - "08-chap8.qmd"
     - "refs.qmd"
   sidebar:
     style: "docked"
